Fixed some inconsistencies in naming

--- a/lookMumItWorks.yml
+++ b/lookMumItWorks.yml
@@ -3,5 +3,5 @@
   tasks:
     - name: Prove it
       debug:
-        msg: "I have recieved an alert titled {{ alertName }} I will run this on host {{ hostname }}"
+        msg: "I have recieved an alert titled {{ ruleName }} I will run this on host {{ hostname }}"
 
